force-app/main/default/objects/SAC_ParametrizacionEscalado__c/SAC_ParametrizacionEscalado__c.object-meta.xml
<CustomObject>
    <label>Parametrización Validación Escalado</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Parametrización Validación Esc</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parametrización Validación Escalados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>