force-app/main/default/objects/SAC_ParametrizacionEscalado__c/fields/Aplica_escalado__c.field-meta.xml
<CustomField>
    <fullName>Aplica_escalado__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Aplica escalado</label>
    <type>Checkbox</type>
</CustomField>