force-app/main/default/objects/SAC_ParametrizacionEscalado__c/fields/SAC_despacho__c.field-meta.xml
<CustomField>
    <fullName>SAC_despacho__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Despacho</label>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Parametrización Validación Escalados (Despacho)</relationshipLabel>
    <relationshipName>Parametrizaci_n_Validaci_n_Escalados1</relationshipName>
    <type>Lookup</type>
</CustomField>