force-app/main/default/objects/SAC_ParametrizacionEscalado__c/fields/SAC_Entidad__c.field-meta.xml
<CustomField>
    <fullName>SAC_Entidad__c</fullName>
    <description>Entidad para la validación de entidad.</description>
    <label>Entidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_001</fullName>
                <label>Caixabank</label>
            </value>
            <value>
                <fullName>SAC_002</fullName>
                <label>Caixabank, S.A.</label>
            </value>
            <value>
                <fullName>SAC_003</fullName>
                <label>Caixabank Consumer Finance, S.A.</label>
            </value>
            <value>
                <fullName>SAC_004</fullName>
                <label>Caixabank Asset Management</label>
            </value>
            <value>
                <fullName>SAC_005</fullName>
                <label>Corporación Hipoteca Mutual</label>
            </value>
            <value>
                <fullName>SAC_006</fullName>
                <label>Caixabank Payments E.F.C. E.P,S.A.U.</label>
            </value>
            <value>
                <fullName>SAC_007</fullName>
                <label>Vidacaixa, S.A. de Seguros y Reaseguros</label>
            </value>
            <value>
                <fullName>SAC_008</fullName>
                <label>Segurcaixa</label>
            </value>
            <value>
                <fullName>SAC_009</fullName>
                <label>Microbank</label>
            </value>
            <value>
                <fullName>SAC_010</fullName>
                <label>CAIXABANK ELECTRONIC MONEY, EDE, S.L.</label>
            </value>
            <value>
                <fullName>SAC_011</fullName>
                <label>Telefonica Consumer Finance</label>
            </value>
            <value>
                <fullName>SAC_012</fullName>
                <label>Bankia</label>
            </value>
            <value>
                <fullName>SAC_013</fullName>
                <label>Comercia Global Payments entidad de pago, S.L.</label>
            </value>
            <value>
                <fullName>SAC_014</fullName>
                <label>Corporación Hipotecaria Mutual</label>
            </value>
            <value>
                <fullName>SAC_015</fullName>
                <label>Caixabank Payments &amp; Consumer</label>
            </value>
            <value>
                <fullName>SAC_016</fullName>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>