force-app/main/default/objects/SAC_ParametrizacionEscalado__c/fields/SAC_GrupoDestino__c.field-meta.xml
<CustomField>
    <fullName>SAC_GrupoDestino__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo Destino</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.SAC_PermiteEscalado__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Parametrización Validación Escalados</relationshipLabel>
    <relationshipName>Parametrizaci_n_Validaci_n_Escalados</relationshipName>
    <type>Lookup</type>
</CustomField>