force-app/main/default/objects/SAC_ParametrizacionEscalado__c/fields/SAC_Importe__c.field-meta.xml
<CustomField>
    <fullName>SAC_Importe__c</fullName>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>