force-app/main/default/objects/SAC_ParametrizacionEscalado__c/fields/SAC_MCC__c.field-meta.xml
<CustomField>
    <fullName>SAC_MCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MCC</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Parametrización Validación Escalados</relationshipLabel>
    <relationshipName>Parametrizaci_n_Validaci_n_Escalados</relationshipName>
    <type>Lookup</type>
</CustomField>