force-app/main/default/objects/SAC_ParametrizacionEscalado__c/fields/SAC_Mensaje__c.field-meta.xml
<CustomField>
    <fullName>SAC_Mensaje__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mensaje</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>