force-app/main/default/objects/SAC_ParametrizacionEscalado__c/fields/SAC_TodosDespachos__c.field-meta.xml
<CustomField>
    <fullName>SAC_TodosDespachos__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Aplica todos los despachos</label>
    <type>Checkbox</type>
</CustomField>