force-app/main/default/objects/SAC_ParametrizacionEscalado__c/fields/SAC_todosMCCs__c.field-meta.xml
<CustomField>
    <fullName>SAC_todosMCCs__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Aplica a todos los MCCs</label>
    <type>Checkbox</type>
</CustomField>