force-app/main/default/objects/SAC_ParametrizacionEscalado__c/fields/SAC_validarImporte__c.field-meta.xml
<CustomField>
    <fullName>SAC_validarImporte__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Validar Importe</label>
    <type>Checkbox</type>
</CustomField>