force-app/main/default/objects/SAC_ParametrizacionEscalado__c/fields/SAC_ValidarImporte_Hasta__c.field-meta.xml
<CustomField>
    <fullName>SAC_ValidarImporte_Hasta__c</fullName>
    <label>Importe Hasta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>