force-app/main/default/objects/SAC_ParametrizacionEscalado__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAC_Mensaje__c</columns>
    <columns>SAC_Entidad__c</columns>
    <columns>SAC_GrupoDestino__c</columns>
    <columns>SAC_Importe__c</columns>
    <columns>SAC_ValidarImporte_Hasta__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>